--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,6 +2,7 @@
 <script type="text/javascript">
     var fileCount = 1
     var uploadArray = [false]
+
     function handleFiles() {
         const file = $(this)[0].files[0]
         var parentId = $(this).parent()[0].id
@@ -20,13 +21,17 @@
         ajax.send(formData);
     }
     $(document).ready(function(){
+        <% if (role == 'superuser') {%>
+            var addGroup = '';
+            <% piGroup.forEach(group => { %>
+                addGroup += "<option value='" + "<%= group.group %>" + "'>" + "<%= group.group %>" +"</option>"
+            <% }); %>
+            $(document.getElementById("group")).append(addGroup)
+        <% } %>
         $("#1").children().first().change(handleFiles);
         $("#newrows").click(function(){
             var addUpload = "<tr>";
-            addUpload += "<td id = '"+ ++fileCount +"'><input type = 'file' name = 'file' accept='image/*, video/*' required/><br><progress id='progressBar' value='0' max='100' style='width:300px;'></progress></td>";
-            // addUpload += "<td><input type = 'text' name = 'fadeIn' pattern = '^(?:[1-9][0-9]*|0)$' required/></td>";
-            // addUpload += "<td><input type = 'text' name = 'fadeOut' pattern = '^(?:[1-9][0-9]*|0)$' required/></td>";
-            // addUpload += "<td><input type = 'text' name = 'length' id = 'length"+ fileCount +"' pattern = '^(?:[1-9][0-9]*)$'/></td>";
+            addUpload += "<td id = '"+ ++fileCount +"'><input type = 'file' name = 'file' class = 'file' accept='image/*, video/*' required/><br><progress id='progressBar' value='0' max='100' style='width:300px;'></progress></td>";
             addUpload += "</tr>";
             $("table tbody").append(addUpload);
             $("#"+fileCount).children().first().change(handleFiles);
@@ -34,9 +39,11 @@
         });
         $('#removerow').click(function(){
             $('#uploadTable tbody tr:last').remove();
+            fileCount--;
             uploadArray.pop()
         })
         $('#fileUpload').submit((event) => {
+            event.preventDefault()
             flag = true
             uploadArray.forEach((file)=>{
                 if (!file) {
@@ -44,7 +51,32 @@
                     flag = false
                 }
             })
-            return flag
+            if (!flag) return false
+            var formdata = new FormData();
+            var img, file;
+
+            for (var i=0; i < fileCount; i++) {
+                file = $('.file')[i].files[0]
+                formdata.append("file", file);
+            }
+
+            if (document.getElementById('group') != null) formdata.append('group', document.getElementById('group').value)
+
+            $.ajax({
+                url: "/files/upload",
+                type: "POST",
+                data: formdata,
+                processData: false,
+                contentType: false,
+                success: function(res) {
+                    if (res == 'success') location.reload()
+                },       
+                error: function(res) {
+                    console.log('error')
+                    console.log(res)
+                }       
+            })
+
         })
     });
 </script>
@@ -54,27 +86,25 @@
 <body>
     <center>
     <h1>File Upload</h1>
+    <% if (role == 'superuser') { %>
+        <label for="group">Group Name: </label>
+        <select name="Group" id="group"></select>
+    <% } %> 
     <hr>
     <form id="fileUpload" method = "POST" action = "/files/upload" enctype = "multipart/form-data">
     <table id='uploadTable' border ="1">
         <thead>
             <tr>
                 <th>File</th>
-                <!-- <th>Fade In</th>
-                <th>Fade Out</th>
-                <th>Length</th> -->
             </tr>
         <thead>
         <tbody>
             <tr>
                 <td id ='1'>
-                    <input type = 'file' name = 'file' id = 'file' accept="image/*, video/*" required/>
+                    <input type = 'file' name = 'file' class='file' accept="image/*, video/*" required/>
                     <br>
                     <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
                 </td>
-                <!-- <td><input type = 'text' name = 'fadeIn' pattern = "^(?:[1-9][0-9]*|0)$" required/></td>
-                <td><input type = 'text' name = 'fadeOut' pattern = "^(?:[1-9][0-9]*|0)$" required/></td>
-                <td><input type = 'text' name = 'length' id = "length1" pattern = "^(?:[1-9][0-9]*)$"/></td> -->
             </tr>
         </tbody>
     </table>
